eirini-persi/k8s/orig.yaml
apiVersion: v1
items:
- apiVersion: admissionregistration.k8s.io/v1beta1
  kind: MutatingWebhookConfiguration
  metadata:
    creationTimestamp: "2020-01-14T21:45:49Z"
    generation: 1
    name: eirini-x-mutating-hook-eirini
    resourceVersion: "9266055"
    selfLink: /apis/admissionregistration.k8s.io/v1beta1/mutatingwebhookconfigurations/eirini-x-mutating-hook-eirini
    uid: 3a761973-3717-11ea-bf39-42010a8e00c0
  webhooks:
  - clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUU4akNDQXRxZ0F3SUJBZ0lVUktWTHkyRkJJZndhZE5mdDB4dGN1VnY3ZHBnd0RRWUpLb1pJaHZjTkFRRU4KQlFBd0VURVBNQTBHQTFVRUF4TUdVME5HSUVOQk1CNFhEVEl3TURFeE5ESXhOREV3TUZvWERUSXhNREV4TXpJeApOREV3TUZvd0VURVBNQTBHQTFVRUF4TUdVME5HSUVOQk1JSUNJakFOQmdrcWhraUc5dzBCQVFFRkFBT0NBZzhBCk1JSUNDZ0tDQWdFQXZVVXNpN281eVZDRi9SelpRdXRtMVBQUTdnSEc5citxamNuT01XQjlYNWRsWTJFYThKbU0KYTZ6bVZKK3hSSmk4MUJSMFQ3VVdQWVhTc1NQVFRDK0txTEpON0NBQVJWMkxmWDlnU3dnWEYzdGd3UmJoTVdvagpBNGUvWnRHc2hO [...]
      service:
        name: eirini-ext-svc
        namespace: eirini
        path: /0
    failurePolicy: Fail
    name: 0.eirini-x.org
    namespaceSelector:
      matchLabels:
        eirini-x-ns: eirini
    rules:
    - apiGroups:
      - ""
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - pods
    sideEffects: Unknown
- apiVersion: admissionregistration.k8s.io/v1beta1
  kind: MutatingWebhookConfiguration
  metadata:
    annotations:
      common-webhooks.networking.gke.io/webhook-name: pod-ready
    creationTimestamp: "2019-12-23T20:12:18Z"
    generation: 1
    labels:
      networking.gke.io/common-webhooks: "true"
    name: pod-ready.config.common-webhooks.networking.gke.io
    resourceVersion: "154"
    selfLink: /apis/admissionregistration.k8s.io/v1beta1/mutatingwebhookconfigurations/pod-ready.config.common-webhooks.networking.gke.io
    uid: 85035fee-25c0-11ea-bee4-42010a8e0007
  webhooks:
  - clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURERENDQWZTZ0F3SUJBZ0lSQUtyYW5BalA0Y0dBZWZWN2hiVjZEOUV3RFFZSktvWklodmNOQVFFTEJRQXcKTHpFdE1Dc0dBMVVFQXhNa1l6Vm1PVFZpTmpJdFpUa3hOUzAwTnpFNExXSmhZamN0WVdSaVlqRmxOMlkxTlRKbQpNQjRYRFRFNU1USXlNekU1TURrME4xb1hEVEkwTVRJeU1USXdNRGswTjFvd0x6RXRNQ3NHQTFVRUF4TWtZelZtCk9UVmlOakl0WlRreE5TMDBOekU0TFdKaFlqY3RZV1JpWWpGbE4yWTFOVEptTUlJQklqQU5CZ2txaGtpRzl3MEIKQVFFRkFBT0NBUThBTUlJQkNnS0NBUUVBN0w1U1hmdmFxTG51azlIWmpEVTIrcURmL011dkVwUHNQaU1PSDltWApwQVVYelYzR3hp [...]
      url: https://localhost:5443/webhook/pod-ready
    failurePolicy: Ignore
    name: pod-ready.common-webhooks.networking.gke.io
    namespaceSelector: {}
    rules:
    - apiGroups:
      - ""
      apiVersions:
      - v1
      operations:
      - CREATE
      resources:
      - pods
    sideEffects: Unknown
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
