eirini-persi/k8s/pods.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app.kubernetes.io/instance: eirini-ext
    app.kubernetes.io/name: eirini-ext
  name: eirini-ext
spec:
  serviceAccountName: eirini-ext-volume-services
  automountServiceAccountToken: true
  containers:
  - image: cfpersi/eirini-ext
    imagePullPolicy: Always
    name: eirini-ext
    env:
    - name: OPERATOR_WEBHOOK_HOST
      value: 0.0.0.0
    - name: OPERATOR_WEBHOOK_PORT
      value: "443"
    - name: OPERATOR_SERVICE_NAME
      value: "eirini-ext-svc"
    - name: OPERATOR_WEBHOOK_NAMESPACE
      value: "eirini"
    ports:
    - containerPort: 443
      name: http
      protocol: TCP
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
---
apiVersion: v1
kind: Service
metadata:
  name: eirini-ext-svc
spec:
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app.kubernetes.io/instance: eirini-ext
    app.kubernetes.io/name: eirini-ext
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
  name: eirini-ext
spec:
  rules:
  - host: eirini-ext.app.cf.ephemeral-eirini-gke-2.cf-app.com
    http:
      paths:
      - backend:
          serviceName: eirini-ext-svc
          servicePort: https
        path: /
